<resources>
    <string name="app_name">Nigeria Weather App</string>
    <string name="view_weather">View Weather</string>
    <string name="wind">Wind: %1$d</string>
    <string name="pressure">Pressure: %1$d</string>
    <string name="humidity">Humidity: %1$d</string>
    <string name="visibility">Visibility: %1$d</string>
    <string name="dew_point">Dew point: %1$d</string>
    <string name="uv_index">UV index: %1$d</string>
    <string name="degree_celsius_symbol">°C</string>
    <string name="image_weather">image_weather</string>
    <string name="description_weather_condition_icon">weather condition icon</string>
    <string name="weather_image">Weather Image</string>
    <string-array name="states_list_filter">
        <item>States</item>
        <item>All States</item>
        <item>Abia</item>
        <item>Adamawa</item>
        <item>Akwa Ibom</item>
        <item>Anambra</item>
        <item>Bauchi</item>
        <item>Bayelsa</item>
        <item>Benue</item>
        <item>Borno</item>
        <item>Cross River</item>
        <item>Delta</item>
        <item>Ebonyi</item>
        <item>Edo</item>
        <item>Federal Capital Territory</item>
        <item>Ekiti</item>
        <item>Enugu</item>
        <item>Gombe</item>
        <item>Imo</item>
        <item>Jigawa</item>
        <item>Kaduna</item>
        <item>Kano</item>
        <item>Katsina</item>
        <item>Kebbi</item>
        <item>Kogi</item>
        <item>Kwara</item>
        <item>Lagos</item>
        <item>Nassarawa</item>
        <item>Niger</item>
        <item>Ogun</item>
        <item>Ondo</item>
        <item>Osun</item>
        <item>Oyo</item>
        <item>Plateau</item>
        <item>Rivers</item>
        <item>Sokoto</item>
        <item>Taraba</item>
        <item>Yobe</item>
        <item>Zamfara</item>
    </string-array>
</resources>